# IntervalGraphColoring

./: .gitignore  LICENSE  Notes.md  README.md
Code/: CMakeLists.txt  IGC_GA.cpp  hello  helpers.cpp  helpers.h  igc  main  main.cpp  max_number_colors  max_number_colors.cpp  playground  playground.cpp
Code/helpers/: Helpers.h
Code/utils/: AdjacencyMatrix.cpp  AdjacencyMatrix.h  IntervalColoring.h  NodesOrdering.h  WeightVector.cpp  WeightVector.h
